Made filtering cleaner and more optimized. Also added distance stamps for each pin when filtering by distance.

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -48,12 +48,13 @@
                             <h:selectOneMenu id="map-menu-sort-select" class="input-control" value="#{pinManager.filterOption}">
                                 <f:selectItem itemValue="pop" itemLabel="Popularity" />
                                 <f:selectItem itemValue="new" itemLabel="Newest" />
-                                <f:selectItem itemValue="dist" itemLabel="Distance" />                                                            
-                                <f:ajax render=":filterForm :map-menu-pins-list-form"/>
-                            </h:selectOneMenu>
+                                <f:selectItem itemValue="dist" itemLabel="Distance" /> 
+                                <f:selectItem itemValue="key" itemLabel="Keyword" />
+                                <f:ajax render=":filterForm :map-menu-pins-list-form :map-menu-filter-keyword-form"/>
+                            </h:selectOneMenu>             
                         </h:form>
                         <!-- Filter by keyword -->
-                        <h:form id="map-menu-filter-keyword-form">
+                        <h:form id="map-menu-filter-keyword-form" style="#{pinManager.keywordFilterStyle}">
                             <h:inputText id="map-menu-filter-keyword-input" class="input-control" 
                                          a:placeholder="Filter by keyword" value="#{pinManager.keywordFilterInput}"/>
                             <h:commandButton id="filter-keyword-btn" style="display: none">
@@ -72,6 +73,12 @@
                             <h:commandButton id="filterBtn" style="display: none">
                                 <f:ajax execute="@form" render=":map-menu-pins-list-form"/>
                             </h:commandButton>
+                            <!-- Sends initial front-end filter data to the backend and
+                                 pre populates backend filtering fields on click. Clicked
+                                 by javascript on document ready.-->
+                            <h:commandButton id="pre-populate-btn" style="display: none" action="#{pinManager.prePopulateMenu()}">
+                                <f:ajax execute=":selectfilterForm" render=":map-menu-pins-list-form :selectfilterForm"/>
+                            </h:commandButton>
                         </h:form>
                     </div>
                     <br/>
@@ -85,7 +92,13 @@
                                             <h:outputText value="#{pin.title}"/>
                                         </div>
                                         <div class="pins-list-pin-desc">
-                                            <h:outputText value="#{pin.description}"/>
+                                            <h:outputText value="#{pin.description}"/>                 
+                                        </div>
+                                        <div class ="pins-list-pin-distance-desc" style="#{pinManager.distanceFilterStyle}">
+                                            <h:outputText value="#{pinManager.getDistanceFromLatLongInMiles(accountManager.userLat, accountManager.userLong, pin.latitude, pin.longitude)}">
+                                                <f:convertNumber type="number" minFractionDigits="2" pattern="#0.00"/>
+                                            </h:outputText>
+                                            <h:outputText value=" miles away"/>
                                         </div>
                                     </div>
                                     <div class="pins-list-pin-img-wrapper">
