--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -85,42 +85,49 @@
                     <!-- Listed pins -->
                     <div id="map-menu-pins-list">
                         <h:form id="map-menu-pins-list-form">
-                            <ui:repeat value="#{pinManager.mapMenuPins}" var="pin">
-                                <div class="pins-list-pin-wrapper">                              
-                                    <div class="pins-list-pin-text-wrapper">
-                                        <div class="pins-list-pin-title">
-                                            <h:outputText value="#{pin.title}"/>
+                            <c:choose>
+                                <c:when test="#{!empty pinManager.mapMenuPins}">
+                                <ui:repeat value="#{pinManager.mapMenuPins}" var="pin">
+                                    <div class="pins-list-pin-wrapper">                              
+                                        <div class="pins-list-pin-text-wrapper">
+                                            <div class="pins-list-pin-title">
+                                                <h:outputText value="#{pin.title}"/>
+                                            </div>
+                                            <div class="pins-list-pin-desc">
+                                                <h:outputText value="#{pin.description}"/>                 
+                                            </div>
+                                            <div class ="pins-list-pin-distance-desc" style="#{pinManager.distanceFilterStyle}">
+                                                <h:outputText value="#{pinManager.getDistanceFromLatLongInMiles(accountManager.userLat, accountManager.userLong, pin.latitude, pin.longitude)}">
+                                                    <f:convertNumber type="number" minFractionDigits="2" pattern="#0.00"/>
+                                                </h:outputText>
+                                                <h:outputText value=" miles away"/>
+                                            </div>
                                         </div>
-                                        <div class="pins-list-pin-desc">
-                                            <h:outputText value="#{pin.description}"/>                 
+                                        <div class="pins-list-pin-img-wrapper">
+                                            <img class="pins-list-pin-img" src="resources/images/profile-picture-2.png" alt="" />
                                         </div>
-                                        <div class ="pins-list-pin-distance-desc" style="#{pinManager.distanceFilterStyle}">
-                                            <h:outputText value="#{pinManager.getDistanceFromLatLongInMiles(accountManager.userLat, accountManager.userLong, pin.latitude, pin.longitude)}">
-                                                <f:convertNumber type="number" minFractionDigits="2" pattern="#0.00"/>
-                                            </h:outputText>
-                                            <h:outputText value=" miles away"/>
+                                        <div class="pins-list-pin-view" onclick="window.location='index.xhtml?id=' + #{pin.id}">View full pin</div>
+                                        <div class="pins-list-pin-date">
+                                            &nbsp;&nbsp;&bull;&nbsp;&nbsp;<h:outputText value="#{pinManager.getFormattedDate(pin)}"/>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                                         </div>
+                                        <div class="pins-list-pin-votes">
+                                            <h:outputText value="#{pin.upvotes - pin.downvotes} points"/>
+                                        </div>   
                                     </div>
-                                    <div class="pins-list-pin-img-wrapper">
-                                        <img class="pins-list-pin-img" src="resources/images/profile-picture-2.png" alt="" />
-                                    </div>
-                                    <div class="pins-list-pin-view" onclick="window.location='index.xhtml?id=' + #{pin.id}">View full pin</div>
-                                    <div class="pins-list-pin-date">
-                                        &nbsp;&nbsp;&bull;&nbsp;&nbsp;<h:outputText value="#{pinManager.getFormattedDate(pin)}"/>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                                    </div>
-                                    <div class="pins-list-pin-votes">
-                                        <h:outputText value="#{pin.upvotes - pin.downvotes} points"/>
-                                    </div>   
-                                </div>
-                                
-                                <hr class="pins-list-pin-divider"/>
-                            </ui:repeat>
-                            <h:commandButton id="filterPinsByDistance" style="display: none" action="#{pinManager.filterByDistance()}">
-                                <f:ajax execute="@form" render="@form"/>
-                            </h:commandButton>
-                            <h:commandButton id="filterPinsByKeyword" style="display: none" action="#{pinManager.filterByKeyword()}">
-                                <f:ajax execute="@form" render="@form"/>
-                            </h:commandButton>                            
+
+                                    <hr class="pins-list-pin-divider"/>
+                                </ui:repeat>
+                                <h:commandButton id="filterPinsByDistance" style="display: none" action="#{pinManager.filterByDistance()}">
+                                    <f:ajax execute="@form" render="@form"/>
+                                </h:commandButton>
+                                <h:commandButton id="filterPinsByKeyword" style="display: none" action="#{pinManager.filterByKeyword()}">
+                                    <f:ajax execute="@form" render="@form"/>
+                                </h:commandButton>
+                                </c:when>
+                                <c:when test="#{empty pinManager.mapMenuPins}">
+                                    <h:outputText value="No pins to display."/>
+                                </c:when>
+                            </c:choose>
                         </h:form>
                     </div>
                     <!-- End of listed pins area -->
