Many small fixes from testing

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -156,7 +156,7 @@
                             </div>
                             <div id="full-pin-title"><h:outputText value="#{pinManager.selectedPin.title}" /></div>
                             <div id="full-pin-desc"><h:outputText value="#{pinManager.selectedPin.description}" /></div>
-                            <div id="full-pin-details">By <h:outputText value="#{pinManager.selectedPin.username}" /> on <h:outputText value="#{pinManager.getFullFormattedDate(pinManager.selectedPin)}" /></div>
+                            <div id="full-pin-details">By <h:outputText value="#{pinManager.getUsernameFromPin(pinManager.selectedPin)}" /> on <h:outputText value="#{pinManager.getFullFormattedDate(pinManager.selectedPin)}" /></div>
                         </h:panelGroup>
                         <hr class="full-pin-divider" />
                         <!-- Comments -->
