Changed welcome page to include a description

--- a/web/Welcome.xhtml
+++ b/web/Welcome.xhtml
@@ -29,7 +29,7 @@ Copyright Â© 2016 Hung Vu. All rights reserved.
                 <div id="welcome-wrapper">
                     <img id="welcome-title" src="resources/images/welcome-title.png" alt="StreetSmart" />
                     <br/>
-                    <div id="welcome-message">What's going on around you?</div>
+                    <div id="welcome-message">What's going on around you?<br/><br/><span style="font-size: 15px;">StreetSmart is a cloud-based application that allows you<br/>to post and view what's going on at your location.</span></div>
                     <br/><br/><br/>
                     <h:link id="get-started" outcome="index">Get Started</h:link>
                 </div>
