--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -125,12 +125,12 @@
                         </h:form>
                         <h:form id="distance-form">
                             <h:commandButton id="filterPinsByDistance" style="display: none" action="#{pinManager.filterByDistance()}">
-                                <f:ajax execute="@form" render="@form"/>
+                                <f:ajax execute="@form" render=":map-menu-pins-list-form"/>
                             </h:commandButton>
                         </h:form>
                         <h:form id="keyword-form">
                             <h:commandButton id="filterPinsByKeyword" style="display: none" action="#{pinManager.filterByKeyword()}">
-                                <f:ajax execute="@form" render="@form"/>
+                                <f:ajax execute="@form" render=":map-menu-pins-list-form"/>
                             </h:commandButton>
                         </h:form>
                     </div>
